# pm

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile
backend/: AGENTS.md  db.py  kanban.db  main.py  pyproject.toml
backend/tests/: conftest.py  test_ai.py  test_api.py  test_db.py
docs/: DATABASE.md  README-frontend.md  review-1.md  schema.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: AiSidebar.test.tsx  AiSidebar.tsx  CardModal.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginForm.tsx  NewCardForm.tsx
frontend/src/lib/: api.ts  kanban.ts
frontend/test-results/: .last-run.json
frontend/tests/: kanban.spec.ts
scripts/: start.ps1  start.sh  stop.ps1  stop.sh
